# memfault-esp-rs-example

./: .gitmodules  CMakeLists.txt  Cargo.toml  Makefile.toml  README.md  bindings.h  build.rs  partitions.csv  sdkconfig.defaults
.cargo/: config.toml
memfault/: memfault_device_info.c  memfault_metrics_heartbeat_config.def
src/: main.rs  memfault.rs
