[package]
name = "memfault-esp-rs"
version = "0.1.0"
authors = ["Blake Hildebrand <blake@memfault.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.66"

[profile.release]
debug = true
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]

default = ["std", "hal", "esp-idf-sys/native"]


pio = ["esp-idf-sys/pio"]
all = ["std", "nightly", "experimental", "embassy"]
hal = ["esp-idf-hal", "embedded-svc", "esp-idf-svc"]
std = ["alloc", "esp-idf-sys/std", "esp-idf-sys/binstart", "embedded-svc?/std", "esp-idf-hal?/std", "esp-idf-svc?/std"]
alloc = ["embedded-svc?/alloc", "esp-idf-hal?/alloc", "esp-idf-svc?/alloc"]
nightly = ["embedded-svc?/nightly", "esp-idf-svc?/nightly"] # Future: "esp-idf-hal?/nightly"
experimental = ["embedded-svc?/experimental", "esp-idf-svc?/experimental"]
embassy = ["esp-idf-hal?/embassy-sync", "esp-idf-hal?/critical-section", "esp-idf-hal?/edge-executor", "esp-idf-svc?/embassy-time-driver", "esp-idf-svc?/embassy-time-isr-queue"]

[dependencies]
anyhow = "1.0.44"
log = { version = "0.4.17", default-features = false }
esp-idf-sys = { version = "0.33", default-features = false }
esp-idf-hal = { version = "0.41", optional = true, default-features = false }
esp-idf-svc = { version = "0.46", optional = true, default-features = false }
embedded-svc = { version = "0.25", optional = true, default-features = false }

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = ["external/memfault-firmware-sdk/ports/esp_idf/memfault"]
bindings_header = "bindings.h"
bindings_module = "memfault"

[package.metadata.espflash]
partition_table = "partitions.csv"

# [package.metadata.esp-idf-sys]
# esp_idf_components = ["esp_http_client", "esp_adc"]

[build-dependencies]
embuild = "0.31.2"
cmake = "0.1"
