[package]
name = "memfault-esp-rs"
version = "0.1.0"
authors = ["Blake Hildebrand <blake@memfault.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.66"

[profile.release]
# Make sure debug symbols are enabled for release builds. They are needed for
# Memfault to symbolicate coredumps, and they don't affect the size of the
# binary on flash.
debug = true
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]

default = ["std", "hal", "esp-idf-sys/native"]

pio = ["esp-idf-sys/pio"]
all = ["std", "nightly", "experimental", "embassy"]
hal = ["esp-idf-hal", "embedded-svc", "esp-idf-svc"]
std = ["alloc", "esp-idf-sys/std", "esp-idf-sys/binstart", "embedded-svc?/std", "esp-idf-hal?/std", "esp-idf-svc?/std"]
alloc = ["embedded-svc?/alloc", "esp-idf-hal?/alloc", "esp-idf-svc?/alloc"]
nightly = ["embedded-svc?/nightly", "esp-idf-svc?/nightly"] # Future: "esp-idf-hal?/nightly"
experimental = ["embedded-svc?/experimental", "esp-idf-svc?/experimental"]
embassy = ["esp-idf-hal?/embassy-sync", "esp-idf-hal?/critical-section", "esp-idf-hal?/edge-executor", "esp-idf-svc?/embassy-time-driver", "esp-idf-svc?/embassy-time-isr-queue"]

[dependencies]
anyhow = "1.0.44"
log = { version = "0.4.17", default-features = false }
esp-idf-sys = { version = "0.33", default-features = false }
esp-idf-hal = { version = "0.41", optional = true, default-features = false }
esp-idf-svc = { version = "0.46", optional = true, default-features = false }
embedded-svc = { version = "0.25", optional = true, default-features = false }

# Add Memfault as an external component
[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = ["external/memfault-firmware-sdk/ports/esp_idf/memfault"]
bindings_header = "bindings.h"
bindings_module = "memfault"

# Add partition table. The coredump partition is required for Memfault
# coredumps to work properly.
[package.metadata.espflash]
partition_table = "partitions.csv"

[build-dependencies]
embuild = "0.31.2"
cmake = "0.1"

