[package]
name = "memfault-esp-rs"
version = "0.1.0"
authors = ["Blake Hildebrand <blake@memfault.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.75"

[profile.release]
# Make sure debug symbols are enabled for release builds. They are needed for
# Memfault to symbolicate coredumps, and they don't affect the size of the
# binary on flash.
debug = true
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]

default = ["std", "binstart"]

std = ["alloc", "log/std", "esp-idf-hal/std", "embedded-svc/std"]
alloc = ["esp-idf-hal/alloc", "embedded-svc/alloc", "uncased/alloc"]
nightly = ["embedded-svc/nightly", "esp-idf-hal/nightly"]
experimental = ["embedded-svc/experimental"]

# Propagated esp-idf-hal features
critical-section = ["esp-idf-hal/critical-section"]
wake-from-isr = ["esp-idf-hal/wake-from-isr"]
embassy-sync = ["esp-idf-hal/embassy-sync"]

# The next are propagated from esp-idf-sys via esp-idf-hal
native = ["esp-idf-hal/native"]
pio = ["esp-idf-hal/pio"]
alloc_handler = ["esp-idf-hal/alloc_handler"]
panic_handler = ["esp-idf-hal/panic_handler"]
binstart = ["esp-idf-hal/binstart"]
libstart = ["esp-idf-hal/libstart"]

[dependencies]
anyhow = "1.0.44"
log = { version = "0.4.17", default-features = false }
nb = "1.0.0"
heapless = { version = "0.8", default-features = false }
num_enum = { version = "0.7", default-features = false }
enumset = { version = "1", default-features = false }
uncased = { version = "0.9.7", default-features = false }
embedded-hal-async = { version = "1", default-features = false }
embedded-svc = { version = "0.27", default-features = false }
esp-idf-sys = { version = "0.34" }
esp-idf-svc = { version = "0.48" }
esp-idf-hal = { version = "0.43", default-features = false }
embassy-time-driver = { version = "0.1", optional = true, features = ["tick-hz-1_000_000"] }
embassy-futures = "0.1"

# Add Memfault as an external component
[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = ["external/memfault-firmware-sdk/ports/esp_idf/memfault"]
bindings_header = "bindings.h"
bindings_module = "memfault"

# Add partition table. The coredump partition is required for Memfault
# coredumps to work properly.
[package.metadata.espflash]
partition_table = "partitions.csv"

[build-dependencies]
embuild = "0.31.2"
cmake = "0.1"

